    * Orthograpy: #5341 - http://bugs.python.org/issue5341
    * Py3k warnings in Python >=2.6: #7092 - http://bugs.python.org/issue7092
    * Correct path for tests:
      #7269 - http://bugs.python.org/issue7269 - Florent Xicluna
    * Shebang: benjamin.peterson
    * Use new Python 2.7 assert()'s: Florent Xicluna
  * Solve a spurious stdlib warning in python >=2.6 with -3 flags.

4.8.3:
  * "bsddb.h" inclusion in PYPI is inconsistent. Solved.
  * Support for "DB_ENV->mutex_stat()", "DB_ENV->mutex_stat_print()",
    "DB->stat_print()", "DB_ENV->lock_stat_print()",
    "DB_ENV->log_stat_print()", "DB_ENV->stat_print()",
    "DB_ENV->memp_stat()" and "DB_ENV->memp_stat_print()".
  * Support for "DB_ENV->get_tmp_dir()".
  * Support for "DB_STAT_SUBSYSTEM", "DB_STAT_MEMP_HASH" flags.
  * Support for "DB_ENV->set_mp_max_openfd()", "DB_ENV->get_mp_max_openfd()",
    "DB_ENV->set_mp_max_write()", "DB_ENV->get_mp_max_write()",
    "DB_ENV->get_mp_mmapsize()".
  * New DataType: DBLogCursor. If you are using the C api, you could need
    to recompile your code because the changes in the api interface
    structure.
  * Support for "DB_ENV->log_file()", "DB_ENV->log_printf()".
  * Solve a core dump if something bad happens while trying to create a
    transaction object.
  * We protect ourselves of failures in creation of Locks and Sequences
    objects.
  * EGG file is a ZIP file again, not a directory. This requires that
    any program importing the module can write in the ".python-eggs"
    of its user.
  * Keeping a cached copy of the database stats is a bad idea if we have
    several processes working together. We drop all this code. So "len()"
    will require a database scanning always, not only when there is any
    write. If you need an accurate and fast "len()", the application must
    keep that information manually in a database register.

4.8.2:
  * Support for "DB_OVERWRITE_DUP", "DB_FOREIGN_ABORT",