@@ -24,7 +24,7 @@ copyright = '2008-2010 Jesus Cea Avion'
 # The short X.Y version.
 version = '4.8.4'
 # The full version, including alpha/beta/rc tags.
-release = '4.8.4devel3'
+release = '4.8.4devel4'
 
 # There are two options for replacing |today|: either, you set today to some
 # non-false value, then it is used:
